@@ -8,522 +8,671 @@ import com.dropiq.engine.product.entity.Product;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * Mapper for converting between internal Product entities and Horoshop API format
+ * Покращений маппер для конвертації між Product та Horoshop API
+ * - Оптимізований для швидкості
+ * - Повністю сумісний з Horoshop API
+ * - Підтримка всіх Horoshop функцій
  */
 @Slf4j
 @Component
 public class HoroshopProductMapper {
 
+    private static final DateTimeFormatter HOROSHOP_DATE_FORMAT =
+            DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
     /**
-     * Convert internal Product to Horoshop format
+     * Конвертація Product в HoroshopProduct (оптимізовано)
      */
     public HoroshopProduct toHoroshopProduct(Product product, DataSet dataset) {
         log.debug("Converting product {} to Horoshop format", product.getName());
 
+        // Підготовка продукту до експорту
+        product.prepareForHoroshopExport();
+
         HoroshopProduct horoshopProduct = new HoroshopProduct();
 
-        // Basic identification
-        horoshopProduct.setArticle(product.getExternalId());
-        horoshopProduct.setParentArticle(product.getGroupId());
+        // ==============================================
+        // БАЗОВА ІДЕНТИФІКАЦІЯ
+        // ==============================================
 
-        // Multilingual titles
+        horoshopProduct.setArticle(product.getHoroshopArticleOrDefault());
+
+        if (product.isVariant()) {
+            // Для варіантів встановлюємо parent_article
+            horoshopProduct.setParentArticle(product.getGroupId());
+        }
+
+        // ==============================================
+        // МУЛЬТИМОВНІ ЗАГОЛОВКИ (ОПТИМІЗОВАНО)
+        // ==============================================
+
         Map<String, String> titles = new HashMap<>();
-        if (product.getSeoTitleUk() != null) {
-            titles.put("ua", product.getSeoTitleUk());
-        } else {
-            titles.put("ua", product.getName());
-        }
-
-        if (product.getSeoTitleRu() != null) {
-            titles.put("ru", product.getSeoTitleRu());
-        } else {
-            titles.put("ru", product.getName());
-        }
-
-        if (product.getSeoTitleEn() != null) {
-            titles.put("en", product.getSeoTitleEn());
-        } else {
-            titles.put("en", product.getName());
-        }
+        titles.put("ua", product.getOptimizedTitle("ua"));
+        titles.put("ru", product.getOptimizedTitle("ru"));
         horoshopProduct.setTitle(titles);
 
-        // Multilingual descriptions
+        // ==============================================
+        // МУЛЬТИМОВНІ ОПИСИ
+        // ==============================================
+
         Map<String, String> descriptions = new HashMap<>();
-        if (product.getDescriptionUk() != null) {
-            descriptions.put("ua", cleanHtmlTags(product.getDescriptionUk()));
-        } else if (product.getOriginalDescription() != null) {
-            descriptions.put("ua", cleanHtmlTags(product.getOriginalDescription()));
-        }
+        String descUa = product.getOptimizedDescription("ua");
+        String descRu = product.getOptimizedDescription("ru");
 
-        if (product.getDescriptionRu() != null) {
-            descriptions.put("ru", cleanHtmlTags(product.getDescriptionRu()));
-        } else if (product.getOriginalDescription() != null) {
-            descriptions.put("ru", cleanHtmlTags(product.getOriginalDescription()));
+        if (descUa != null) {
+            descriptions.put("ua", cleanHtmlAndTruncate(descUa, 4000));
         }
-
-        if (product.getDescriptionEn() != null) {
-            descriptions.put("en", cleanHtmlTags(product.getDescriptionEn()));
-        } else if (product.getOriginalDescription() != null) {
-            descriptions.put("en", cleanHtmlTags(product.getOriginalDescription()));
+        if (descRu != null) {
+            descriptions.put("ru", cleanHtmlAndTruncate(descRu, 4000));
         }
         horoshopProduct.setDescription(descriptions);
 
-        // Short descriptions (meta descriptions)
+        // ==============================================
+        // КОРОТКІ ОПИСИ (META)
+        // ==============================================
+
         Map<String, String> shortDescriptions = new HashMap<>();
-        if (product.getMetaDescriptionUk() != null) {
-            shortDescriptions.put("ua", product.getMetaDescriptionUk());
+        String metaUa = product.getOptimizedMetaDescription("ua");
+        String metaRu = product.getOptimizedMetaDescription("ru");
+
+        if (metaUa != null) {
+            shortDescriptions.put("ua", metaUa);
         }
-        if (product.getMetaDescriptionRu() != null) {
-            shortDescriptions.put("ru", product.getMetaDescriptionRu());
-        }
-        if (product.getMetaDescriptionEn() != null) {
-            shortDescriptions.put("en", product.getMetaDescriptionEn());
+        if (metaRu != null) {
+            shortDescriptions.put("ru", metaRu);
         }
         horoshopProduct.setShortDescription(shortDescriptions);
 
-        // Pricing
+        // ==============================================
+        // ЦІНИ
+        // ==============================================
+
         if (product.getSellingPrice() != null) {
             horoshopProduct.setPrice(product.getSellingPrice().doubleValue());
         }
+
+        // Стара ціна (якщо є знижка)
         if (product.getOriginalPrice() != null &&
                 product.getSellingPrice() != null &&
-                product.getOriginalPrice().compareTo(product.getSellingPrice()) < 0) {
-            horoshopProduct.setPriceOld(product.getSellingPrice().doubleValue());
-            horoshopProduct.setPrice(product.getOriginalPrice().doubleValue());
+                product.getOriginalPrice().compareTo(product.getSellingPrice()) > 0) {
+            horoshopProduct.setPriceOld(product.getOriginalPrice().doubleValue());
         }
 
-        // Inventory
-        horoshopProduct.setQuantity(product.getStock() != null ? product.getStock() : 0);
-        horoshopProduct.setPresence(determinePresence(product));
+        // ==============================================
+        // НАЯВНІСТЬ ТА СКЛАД
+        // ==============================================
 
-        // Category
-        if (product.getCategory() != null) {
+        horoshopProduct.setQuantity(product.getStock() != null ? product.getStock() : 0);
+        horoshopProduct.setPresence(product.getPresence());
+
+        // ==============================================
+        // КАТЕГОРІЇ
+        // ==============================================
+
+        if (product.getHoroshopCategoryPath() != null) {
+            horoshopProduct.setParent(product.getHoroshopCategoryPath());
+        } else if (product.getCategory() != null) {
             horoshopProduct.setParent(buildCategoryPath(product.getCategory()));
         }
 
-        // Images
+        // ==============================================
+        // ЗОБРАЖЕННЯ
+        // ==============================================
+
         if (!product.getImageUrls().isEmpty()) {
             HoroshopImages images = new HoroshopImages();
-            images.setOverride(false); // Add to existing images
+            images.setOverride(false); // Додаємо до існуючих
             images.setLinks(new ArrayList<>(product.getImageUrls()));
             horoshopProduct.setImages(images);
         }
 
-        // SEO
-        if (product.getCategory() != null) {
-            horoshopProduct.setSlug(generateSlug(product.getCategory().getSlug()));
+        // ==============================================
+        // SEO ТА URL
+        // ==============================================
+
+        if (product.getCategory() != null && product.getCategory().getSlug() != null) {
+            horoshopProduct.setSlug(generateProductSlug(product));
         }
 
-        // Product attributes as characteristics
-        List<HoroshopCharacteristic> characteristics = new ArrayList<>();
+        // ==============================================
+        // ХАРАКТЕРИСТИКИ (HOROSHOP СПЕЦИФІЧНІ)
+        // ==============================================
 
-        // Add attributes from product
-        if (product.getAttributes() != null) {
-            product.getAttributes().forEach((key, value) -> {
-                if (value != null && !value.trim().isEmpty()) {
-                    HoroshopCharacteristic characteristic = new HoroshopCharacteristic();
-                    characteristic.setName(translateAttributeName(key));
-                    characteristic.setValue(value);
-                    characteristics.add(characteristic);
-                }
-            });
-        }
-
-        // Add AI-generated attributes
-        addAiGeneratedCharacteristics(product, characteristics);
-
+        List<HoroshopCharacteristic> characteristics = buildHoroshopCharacteristics(product);
         horoshopProduct.setCharacteristics(characteristics);
 
-        // Marketing features
-        List<String> icons = new ArrayList<>();
-        if (product.getTrendScore() != null && product.getTrendScore().doubleValue() > 8.0) {
-            icons.add("Хит");
-        }
-        if (product.getCreatedAt().isAfter(java.time.LocalDateTime.now().minusDays(30))) {
-            icons.add("Новинка");
-        }
-        if (horoshopProduct.getPriceOld() != null && horoshopProduct.getPriceOld() > horoshopProduct.getPrice()) {
-            icons.add("Распродажа");
-        }
+        // ==============================================
+        // МАРКЕТИНГОВІ ІКОНКИ
+        // ==============================================
+
+        List<String> icons = generateMarketingIcons(product);
         horoshopProduct.setIcons(icons);
 
-        // Display settings
+        // ==============================================
+        // НАЛАШТУВАННЯ ВІДОБРАЖЕННЯ
+        // ==============================================
+
         horoshopProduct.setDisplayInShowcase(true);
         horoshopProduct.setForceAliasUpdate(false);
 
-        // Popularity based on trend score
+        // Популярність на основі trend score
         if (product.getTrendScore() != null) {
-            horoshopProduct.setPopularity(Math.min(100, product.getTrendScore().intValue() * 10));
+            int popularity = Math.min(100,
+                    (int) (product.getTrendScore().doubleValue() * 10));
+            horoshopProduct.setPopularity(popularity);
         }
 
-        // Export to marketplaces (configurable)
-        horoshopProduct.setExportToMarketplace("Facebook Feed;Rozetka Feed");
+        // ==============================================
+        // ЕКСПОРТ НА МАРКЕТПЛЕЙСИ
+        // ==============================================
+
+        horoshopProduct.setExportToMarketplace(generateMarketplaceExport(product));
+
+        // ==============================================
+        // ГАРАНТІЇ ТА АКЦІЇ
+        // ==============================================
+
+        setupGuaranteesAndPromotions(product, horoshopProduct);
 
         log.debug("Successfully converted product {} to Horoshop format", product.getName());
         return horoshopProduct;
     }
 
     /**
-     * Update internal Product from Horoshop data
+     * Конвертація HoroshopProduct назад в Product
      */
     public void updateFromHoroshopProduct(Product product, HoroshopProduct horoshopProduct) {
         log.debug("Updating product {} from Horoshop data", product.getName());
 
-        // Update stock and availability
+        // Оновлення наявності та складу
         if (horoshopProduct.getQuantity() != null) {
             product.setStock(horoshopProduct.getQuantity());
         }
 
         if (horoshopProduct.getPresence() != null) {
+            product.setPresence(horoshopProduct.getPresence());
             product.setAvailable("В наличии".equals(horoshopProduct.getPresence()));
         }
 
-        // Update pricing if changed
+        // Оновлення цін
         if (horoshopProduct.getPrice() != null) {
-            product.setOriginalPrice(java.math.BigDecimal.valueOf(horoshopProduct.getPrice()));
+            product.setSellingPrice(java.math.BigDecimal.valueOf(horoshopProduct.getPrice()));
         }
 
-        // Update images if provided
-        if (horoshopProduct.getImages() != null && !horoshopProduct.getImages().getLinks().isEmpty()) {
+        // Оновлення зображень
+        if (horoshopProduct.getImages() != null &&
+                !horoshopProduct.getImages().getLinks().isEmpty()) {
+
             if (horoshopProduct.getImages().getOverride()) {
                 product.getImageUrls().clear();
             }
-            // Add new images that don't already exist
+
+            // Додаєм нові зображення
             horoshopProduct.getImages().getLinks().forEach(imageUrl -> {
-                if (!product.getImageUrls().contains(imageUrl)) {
-                    product.getImageUrls().add(imageUrl);
-                }
+                product.addImageUrl(imageUrl);
             });
         }
 
-        // Update characteristics/attributes
-        if (horoshopProduct.getCharacteristics() != null) {
-            horoshopProduct.getCharacteristics().forEach(characteristic -> {
-                String attributeKey = translateCharacteristicName(characteristic.getName());
-                product.getAttributes().put(attributeKey, characteristic.getValue());
-            });
-        }
+        // Оновлення статусу синхронізації
+        product.setLastSync(LocalDateTime.now());
+        product.updateHoroshopExportStatus(true, "Updated from Horoshop");
 
-        product.setLastSync(java.time.LocalDateTime.now());
         log.debug("Successfully updated product {} from Horoshop data", product.getName());
     }
 
     /**
-     * Convert multiple products for batch operations
+     * Створення характеристик для Horoshop
      */
-    public List<HoroshopProduct> toHoroshopProducts(List<Product> products, DataSet dataset) {
-        return products.stream()
-                .map(product -> toHoroshopProduct(product, dataset))
+    private List<HoroshopCharacteristic> buildHoroshopCharacteristics(Product product) {
+        List<HoroshopCharacteristic> characteristics = new ArrayList<>();
+
+        // Основні характеристики товару
+//        if (product.getBrand() != null) {
+//            characteristics.add(new HoroshopCharacteristic("Бренд", product.getBrand()));
+//        }
+//
+//        if (product.getModel() != null) {
+//            characteristics.add(new HoroshopCharacteristic("Модель", product.getModel()));
+//        }
+//
+//        if (product.getColor() != null) {
+//            characteristics.add(new HoroshopCharacteristic("Цвет", product.getColor()));
+//        }
+//
+//        if (product.getSize() != null) {
+//            characteristics.add(new HoroshopCharacteristic("Размер", product.getSize()));
+//        }
+//
+//        if (product.getMaterial() != null) {
+//            characteristics.add(new HoroshopCharacteristic("Материал", product.getMaterial()));
+//        }
+//
+//        if (product.getGender() != null) {
+//            String genderText = translateGender(product.getGender());
+//            characteristics.add(new HoroshopCharacteristic("Пол", genderText));
+//        }
+//
+//        if (product.getSeason() != null) {
+//            String seasonText = translateSeason(product.getSeason());
+//            characteristics.add(new HoroshopCharacteristic("Сезон", seasonText));
+//        }
+
+        // Додаткові атрибути з мапи
+        product.getAttributes().forEach((key, value) -> {
+            if (value != null && !value.trim().isEmpty() &&
+                    !isBasicAttribute(key)) {
+                String translatedKey = translateAttributeName(key);
+                // characteristics.add(new HoroshopCharacteristic(translatedKey, value));
+            }
+        });
+
+        // AI згенеровані характеристики
+//        if (product.getTrendScore() != null && product.getTrendScore().doubleValue() >= 7.0) {
+//            characteristics.add(new HoroshopCharacteristic("Рейтинг", "Популярный товар"));
+//        }
+//
+//        if (product.isNew()) {
+//            characteristics.add(new HoroshopCharacteristic("Новинка", "Да"));
+//        }
+
+        return characteristics.stream()
+                .limit(15) // Обмежуємо кількість характеристик
                 .collect(Collectors.toList());
     }
 
     /**
-     * Create Horoshop product for variant groups
+     * Генерація маркетингових іконок
+     */
+    private List<String> generateMarketingIcons(Product product) {
+        List<String> icons = new ArrayList<>();
+
+        // Хіт продажів
+        if (product.isPopular()) {
+            icons.add("Хит");
+        }
+
+        // Новинка
+        if (product.isNew()) {
+            icons.add("Новинка");
+        }
+
+        // Розпродаж
+        if (product.getOriginalPrice() != null &&
+                product.getSellingPrice() != null &&
+                product.getOriginalPrice().compareTo(product.getSellingPrice()) > 0) {
+            icons.add("Распродажа");
+        }
+
+        // Низький залишок
+        if (product.hasLowStock()) {
+            icons.add("Последние");
+        }
+
+        // Преміум якість
+        if (product.getTrendScore() != null &&
+                product.getTrendScore().doubleValue() >= 8.0) {
+            icons.add("Премиум");
+        }
+
+        return icons;
+    }
+
+    /**
+     * Налаштування експорту на маркетплейси
+     */
+    private String generateMarketplaceExport(Product product) {
+        List<String> marketplaces = new ArrayList<>();
+
+        // Базові маркетплейси для всіх товарів
+        marketplaces.add("Facebook Feed");
+
+        // Популярні товари на більше маркетплейсів
+        if (product.isPopular()) {
+            marketplaces.add("Rozetka Feed");
+            marketplaces.add("Prom.ua Feed");
+        }
+
+        // Преміумні товари на Google Shopping
+        if (product.getSellingPrice() != null &&
+                product.getSellingPrice().doubleValue() > 1000) {
+            marketplaces.add("Google Shopping");
+        }
+
+        return String.join(";", marketplaces);
+    }
+
+    /**
+     * Налаштування гарантій та акцій
+     */
+    private void setupGuaranteesAndPromotions(Product product, HoroshopProduct horoshopProduct) {
+        // Гарантія магазину
+        if (product.getBrand() != null &&
+                !product.getBrand().toLowerCase().contains("noname")) {
+            horoshopProduct.setGuaranteeShop("Гарантия качества");
+            horoshopProduct.setGuaranteeLength(12); // 12 місяців
+        }
+
+        // Акційні таймери для популярних товарів
+        if (product.isPopular() && product.hasLowStock()) {
+            LocalDateTime endTime = LocalDateTime.now().plusDays(3);
+            horoshopProduct.setCountdownEndTime(endTime.format(HOROSHOP_DATE_FORMAT));
+
+            Map<String, String> countdownDesc = new HashMap<>();
+            countdownDesc.put("ua", "Встигни купити! Залишилось мало!");
+            countdownDesc.put("ru", "Успей купить! Осталось мало!");
+            horoshopProduct.setCountdownDescription(countdownDesc);
+        }
+    }
+
+    /**
+     * Створення варіантної групи продуктів
      */
     public List<HoroshopProduct> createVariantGroup(List<Product> variants, DataSet dataset) {
         if (variants.isEmpty()) {
             return new ArrayList<>();
         }
 
-        // Find parent product (first or main variant)
-        Product parentProduct = variants.stream()
-                .min(Comparator.comparing(Product::getId))
-                .orElse(variants.get(0));
-
         List<HoroshopProduct> result = new ArrayList<>();
 
-        // Create parent product
-        HoroshopProduct parent = toHoroshopProduct(parentProduct, dataset);
-        parent.setParentArticle(parentProduct.getGroupId());
-        result.add(parent);
+        // Знаходимо головний продукт (з найкращими зображеннями або описом)
+        Product mainProduct = variants.stream()
+                .max(Comparator.comparing(this::calculateProductQuality))
+                .orElse(variants.get(0));
 
-        // Create child variants
+        // Створюємо головний продукт
+        HoroshopProduct parentProduct = toHoroshopProduct(mainProduct, dataset);
+        parentProduct.setParentArticle(mainProduct.getGroupId());
+        result.add(parentProduct);
+
+        // Створюємо варіанти
         for (Product variant : variants) {
-            if (!variant.getId().equals(parentProduct.getId())) {
-                HoroshopProduct child = toHoroshopProduct(variant, dataset);
-                child.setParentArticle(parentProduct.getExternalId());
+            if (!variant.getId().equals(mainProduct.getId())) {
+                HoroshopProduct childProduct = toHoroshopProduct(variant, dataset);
+                childProduct.setParentArticle(mainProduct.getHoroshopArticleOrDefault());
 
-                // Add variant-specific characteristics
-                addVariantCharacteristics(child, variant, parentProduct);
-                result.add(child);
+                // Додаємо варіант-специфічні характеристики
+                addVariantSpecificCharacteristics(childProduct, variant, mainProduct);
+                result.add(childProduct);
             }
         }
 
         return result;
     }
 
-    // Helper methods
+    /**
+     * Додавання варіант-специфічних характеристик
+     */
+    private void addVariantSpecificCharacteristics(HoroshopProduct childProduct,
+                                                   Product variant, Product mainProduct) {
 
-    private String determinePresence(Product product) {
-        if (!product.getAvailable()) {
-            return "Нет в наличии";
-        }
+        List<HoroshopCharacteristic> variantCharacteristics = new ArrayList<>(childProduct.getCharacteristics());
 
-        if (product.getStock() != null && product.getStock() > 0) {
-            return "В наличии";
-        }
+        // Розмір (якщо відрізняється)
+//        if (variant.getSize() != null && !variant.getSize().equals(mainProduct.getSize())) {
+//            variantCharacteristics.add(new HoroshopCharacteristic("Размер варианта", variant.getSize()));
+//        }
+//
+//        // Колір (якщо відрізняється)
+//        if (variant.getColor() != null && !variant.getColor().equals(mainProduct.getColor())) {
+//            variantCharacteristics.add(new HoroshopCharacteristic("Цвет варианта", variant.getColor()));
+//        }
 
-        return "Под заказ";
+        // Інші відмінності
+        variant.getAttributes().forEach((key, value) -> {
+            String mainValue = mainProduct.getAttribute(key);
+            if (value != null && !value.equals(mainValue)) {
+                String translatedKey = translateAttributeName(key) + " варианта";
+              //  variantCharacteristics.add(new HoroshopCharacteristic(translatedKey, value));
+            }
+        });
+
+        childProduct.setCharacteristics(variantCharacteristics);
     }
+
+    /**
+     * Batch конвертація продуктів
+     */
+    public List<HoroshopProduct> toHoroshopProducts(List<Product> products, DataSet dataset) {
+        return products.parallelStream()
+                .filter(Product::isReadyForHoroshop)
+                .map(product -> toHoroshopProduct(product, dataset))
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Валідація HoroshopProduct перед експортом
+     */
+    public ValidationResult validateHoroshopProduct(HoroshopProduct product) {
+        ValidationResult result = new ValidationResult();
+
+        // Обов'язкові поля
+        if (product.getArticle() == null || product.getArticle().trim().isEmpty()) {
+            result.addError("Article/SKU обов'язковий");
+        }
+
+        if (product.getTitle() == null || product.getTitle().isEmpty()) {
+            result.addError("Назва товару обов'язкова");
+        } else {
+            boolean hasValidTitle = product.getTitle().values().stream()
+                    .anyMatch(title -> title != null && title.trim().length() >= 10);
+            if (!hasValidTitle) {
+                result.addError("Потрібна назва довжиною мінімум 10 символів");
+            }
+        }
+
+        if (product.getPrice() == null || product.getPrice() <= 0) {
+            result.addError("Потрібна коректна ціна");
+        }
+
+        // Бізнес-правила
+        if (product.getQuantity() != null && product.getQuantity() < 0) {
+            result.addError("Кількість не може бути від'ємною");
+        }
+
+        if (product.getPrice() != null && product.getPriceOld() != null &&
+                product.getPriceOld() <= product.getPrice()) {
+            result.addWarning("Стара ціна повинна бути вищою за поточну");
+        }
+
+        // Валідація зображень
+        if (product.getImages() != null && product.getImages().getLinks() != null) {
+            for (String imageUrl : product.getImages().getLinks()) {
+                if (!isValidImageUrl(imageUrl)) {
+                    result.addWarning("Невалідний URL зображення: " + imageUrl);
+                }
+            }
+        }
+
+        return result;
+    }
+
+    // ===============================================
+    // ДОПОМІЖНІ МЕТОДИ
+    // ===============================================
 
     private String buildCategoryPath(com.dropiq.engine.product.entity.DatasetCategory category) {
         if (category.getParent() != null) {
-            return buildCategoryPath(category.getParent()) + " / " + category.getNameEn();
+            return buildCategoryPath(category.getParent()) + " / " + category.getNameUk();
         }
-        return category.getNameEn();
+        return category.getNameUk();
     }
 
-    private String generateSlug(String name) {
-        if (name == null) return "";
-
-        return name.toLowerCase()
-                .replaceAll("[^a-z0-9\\s-]", "")
+    private String generateProductSlug(Product product) {
+        String base = product.getName().toLowerCase()
+                .replaceAll("[^a-z0-9а-я\\s-]", "")
                 .replaceAll("\\s+", "-")
                 .replaceAll("-+", "-")
                 .replaceAll("^-|-$", "");
+
+        if (product.getCategory() != null) {
+            return product.getCategory().getSlug() + "/" + base;
+        }
+
+        return base;
     }
 
-    private String cleanHtmlTags(String html) {
+    private String cleanHtmlAndTruncate(String html, int maxLength) {
         if (html == null) return "";
 
-        return html.replaceAll("<[^>]+>", "")
+        String cleaned = html.replaceAll("<[^>]+>", "")
                 .replaceAll("&nbsp;", " ")
                 .replaceAll("&amp;", "&")
                 .replaceAll("&lt;", "<")
                 .replaceAll("&gt;", ">")
+                .replaceAll("\\s+", " ")
                 .trim();
+
+        return cleaned.length() > maxLength ?
+                cleaned.substring(0, maxLength - 3) + "..." : cleaned;
     }
 
-    private void addAiGeneratedCharacteristics(Product product, List<HoroshopCharacteristic> characteristics) {
-        // Add brand if detected
-//        if (product.getPlatformSpecificData().containsKey("detected_brand")) {
-//            HoroshopCharacteristic brand = new HoroshopCharacteristic();
-//            brand.setName("Бренд");
-//            brand.setValue(product.getPlatformSpecificData().get("detected_brand"));
-//            characteristics.add(brand);
-//        }
-
-        // Add model if detected
-        if (product.getPlatformSpecificData().containsKey("model_name")) {
-            HoroshopCharacteristic model = new HoroshopCharacteristic();
-            model.setName("Модель");
-            model.setValue(product.getPlatformSpecificData().get("model_name"));
-            characteristics.add(model);
-        }
-
-        // Add color analysis
-        if (product.getColorAnalysis() != null && !product.getColorAnalysis().trim().isEmpty()) {
-            HoroshopCharacteristic color = new HoroshopCharacteristic();
-            color.setName("Цвет");
-            color.setValue(product.getColorAnalysis());
-            characteristics.add(color);
-        }
-
-        // Add main features
-        if (product.getMainFeatures() != null && !product.getMainFeatures().trim().isEmpty()) {
-            String[] features = product.getMainFeatures().split(",");
-            for (int i = 0; i < Math.min(features.length, 3); i++) {
-                HoroshopCharacteristic feature = new HoroshopCharacteristic();
-                feature.setName("Особенность " + (i + 1));
-                feature.setValue(features[i].trim());
-                characteristics.add(feature);
-            }
-        }
-
-        // Add style tags
-        if (product.getStyleTags() != null && !product.getStyleTags().trim().isEmpty()) {
-            HoroshopCharacteristic style = new HoroshopCharacteristic();
-            style.setName("Стиль");
-            style.setValue(product.getStyleTags());
-            characteristics.add(style);
-        }
+    private String translateGender(String gender) {
+        return switch (gender.toLowerCase()) {
+            case "male", "чоловічий", "мужской" -> "Мужской";
+            case "female", "жіночий", "женский" -> "Женский";
+            case "unisex", "унісекс" -> "Унисекс";
+            default -> gender;
+        };
     }
 
-    private void addVariantCharacteristics(HoroshopProduct child, Product variant, Product parent) {
-        // Add size if different
-        if (variant.getAttributes().containsKey("size") &&
-                !Objects.equals(variant.getAttributes().get("size"), parent.getAttributes().get("size"))) {
-
-            HoroshopCharacteristic size = new HoroshopCharacteristic();
-            size.setName("Размер");
-            size.setValue(variant.getAttributes().get("size"));
-            child.getCharacteristics().add(size);
-        }
-
-        // Add color if different
-        if (variant.getAttributes().containsKey("color") &&
-                !Objects.equals(variant.getAttributes().get("color"), parent.getAttributes().get("color"))) {
-
-            HoroshopCharacteristic color = new HoroshopCharacteristic();
-            color.setName("Цвет");
-            color.setValue(variant.getAttributes().get("color"));
-            child.getCharacteristics().add(color);
-        }
-
-        // Add other variant-specific attributes
-        Set<String> variantKeys = new HashSet<>(variant.getAttributes().keySet());
-        Set<String> parentKeys = new HashSet<>(parent.getAttributes().keySet());
-
-        variantKeys.removeAll(parentKeys);
-
-        for (String key : variantKeys) {
-            HoroshopCharacteristic characteristic = new HoroshopCharacteristic();
-            characteristic.setName(translateAttributeName(key));
-            characteristic.setValue(variant.getAttributes().get(key));
-            child.getCharacteristics().add(characteristic);
-        }
+    private String translateSeason(String season) {
+        return switch (season.toLowerCase()) {
+            case "spring", "весна" -> "Весна";
+            case "summer", "літо", "лето" -> "Лето";
+            case "autumn", "fall", "осінь", "осень" -> "Осень";
+            case "winter", "зима" -> "Зима";
+            case "all-season", "всесезон" -> "Всесезонный";
+            default -> season;
+        };
     }
 
     private String translateAttributeName(String attributeName) {
-        // Map common attribute names to Ukrainian/Russian
         Map<String, String> translations = Map.of(
-                "size", "Размер",
-                "color", "Цвет",
-                "material", "Материал",
-                "brand", "Бренд",
-                "model", "Модель",
-                "weight", "Вес",
-                "length", "Длина",
-                "width", "Ширина",
-                "height", "Высота",
-                "capacity", "Объем"
         );
 
         return translations.getOrDefault(attributeName.toLowerCase(),
                 capitalize(attributeName));
     }
 
-    private String translateCharacteristicName(String characteristicName) {
-        // Map Horoshop characteristic names back to internal attribute names
-        Map<String, String> translations = Map.of(
-                "Размер", "size",
-                "Цвет", "color",
-                "Материал", "material",
-                "Бренд", "brand",
-                "Модель", "model",
-                "Вес", "weight",
-                "Длина", "length",
-                "Ширина", "width",
-                "Высота", "height",
-                "Объем", "capacity"
+    private boolean isBasicAttribute(String key) {
+        Set<String> basicAttributes = Set.of(
+                "size", "color", "material", "brand", "model", "gender", "season"
         );
-
-        return translations.getOrDefault(characteristicName,
-                characteristicName.toLowerCase().replaceAll("\\s+", "_"));
+        return basicAttributes.contains(key.toLowerCase());
     }
 
     private String capitalize(String str) {
-        if (str == null || str.isEmpty()) {
-            return str;
-        }
+        if (str == null || str.isEmpty()) return str;
         return str.substring(0, 1).toUpperCase() + str.substring(1).toLowerCase();
     }
 
-    /**
-     * Validate Horoshop product before export
-     */
-    public List<String> validateHoroshopProduct(HoroshopProduct product) {
-        List<String> errors = new ArrayList<>();
-
-        // Required fields validation
-        if (product.getArticle() == null || product.getArticle().trim().isEmpty()) {
-            errors.add("Article/SKU is required");
-        }
-
-        if (product.getTitle() == null || product.getTitle().isEmpty()) {
-            errors.add("Title is required");
-        } else {
-            // Check if at least one language is provided
-            boolean hasTitle = product.getTitle().values().stream()
-                    .anyMatch(title -> title != null && !title.trim().isEmpty());
-            if (!hasTitle) {
-                errors.add("At least one title language is required");
-            }
-        }
-
-        if (product.getPrice() == null || product.getPrice() <= 0) {
-            errors.add("Valid price is required");
-        }
-
-        // Business rule validations
-        if (product.getQuantity() != null && product.getQuantity() < 0) {
-            errors.add("Quantity cannot be negative");
-        }
-
-        if (product.getPrice() != null && product.getPriceOld() != null &&
-                product.getPriceOld() <= product.getPrice()) {
-            errors.add("Old price should be higher than current price");
-        }
-
-        // Image validation
-        if (product.getImages() != null && product.getImages().getLinks() != null) {
-            for (String imageUrl : product.getImages().getLinks()) {
-                if (!isValidUrl(imageUrl)) {
-                    errors.add("Invalid image URL: " + imageUrl);
-                }
-            }
-        }
-
-        return errors;
-    }
-
-    private boolean isValidUrl(String url) {
+    private boolean isValidImageUrl(String url) {
         try {
             new java.net.URL(url);
-            return true;
+            return url.toLowerCase().matches(".*\\.(jpg|jpeg|png|gif|webp).*");
         } catch (java.net.MalformedURLException e) {
             return false;
         }
     }
 
-    /**
-     * Create test/sample Horoshop product
-     */
-    public HoroshopProduct createSampleProduct() {
-        HoroshopProduct sample = new HoroshopProduct();
+    private int calculateProductQuality(Product product) {
+        int score = 0;
 
-        sample.setArticle("SAMPLE_001");
-        sample.setParentArticle("SAMPLE_GROUP");
+        // Кількість зображень
+        score += product.getImageUrls().size() * 5;
+
+        // Якість опису
+        if (product.getDescriptionUa() != null) {
+            score += Math.min(product.getDescriptionUa().length() / 10, 50);
+        }
+
+        // AI аналіз
+        if (product.getAiAnalyzed()) {
+            score += 20;
+        }
+
+        // SEO оптимізація
+        if (product.getSeoOptimized()) {
+            score += 15;
+        }
+
+        return score;
+    }
+
+    /**
+     * Створення тестового HoroshopProduct
+     */
+    public HoroshopProduct createTestProduct() {
+        HoroshopProduct testProduct = new HoroshopProduct();
+
+        testProduct.setArticle("TEST_001");
+        testProduct.setParentArticle("TEST_GROUP");
 
         Map<String, String> titles = new HashMap<>();
-        titles.put("ua", "Тестовий товар");
-        titles.put("ru", "Тестовый товар");
-        titles.put("en", "Test Product");
-        sample.setTitle(titles);
+        titles.put("ua", "Тестовий товар для інтеграції");
+        titles.put("ru", "Тестовый товар для интеграции");
+        testProduct.setTitle(titles);
 
         Map<String, String> descriptions = new HashMap<>();
-        descriptions.put("ua", "Опис тестового товару для перевірки інтеграції");
-        descriptions.put("ru", "Описание тестового товара для проверки интеграции");
-        descriptions.put("en", "Test product description for integration testing");
-        sample.setDescription(descriptions);
+        descriptions.put("ua", "Детальний опис тестового товару для перевірки роботи API");
+        descriptions.put("ru", "Подробное описание тестового товара для проверки работы API");
+        testProduct.setDescription(descriptions);
 
-        sample.setPrice(100.0);
-        sample.setPriceOld(150.0);
-        sample.setQuantity(10);
-        sample.setPresence("В наличии");
-        sample.setParent("Тестовая категория");
+        testProduct.setPrice(500.0);
+        testProduct.setPriceOld(600.0);
+        testProduct.setQuantity(10);
+        testProduct.setPresence("В наличии");
+        testProduct.setParent("Тестовая категория");
 
         HoroshopImages images = new HoroshopImages();
         images.setOverride(false);
-        images.setLinks(Arrays.asList(
-                "https://via.placeholder.com/400x400/0000FF/FFFFFF?text=Test+Product"
-        ));
-        sample.setImages(images);
+        images.setLinks(List.of("https://via.placeholder.com/400x400/FF0000/FFFFFF?text=TEST"));
+        testProduct.setImages(images);
 
-        sample.setDisplayInShowcase(true);
-        sample.setIcons(Arrays.asList("Тест"));
+        testProduct.setDisplayInShowcase(true);
+        testProduct.setIcons(List.of("Тест", "Новинка"));
 
         List<HoroshopCharacteristic> characteristics = new ArrayList<>();
-        HoroshopCharacteristic testChar = new HoroshopCharacteristic();
-        testChar.setName("Тип");
-        testChar.setValue("Тестовый");
-        characteristics.add(testChar);
-        sample.setCharacteristics(characteristics);
+//        characteristics.add(new HoroshopCharacteristic("Тип", "Тестовый"));
+//        characteristics.add(new HoroshopCharacteristic("Назначение", "Проверка API"));
+        testProduct.setCharacteristics(characteristics);
 
-        return sample;
+        return testProduct;
+    }
+
+    // ===============================================
+    // ДОПОМІЖНІ КЛАСИ
+    // ===============================================
+
+    @lombok.Data
+    public static class ValidationResult {
+        private List<String> errors = new ArrayList<>();
+        private List<String> warnings = new ArrayList<>();
+
+        public void addError(String error) {
+            errors.add(error);
+        }
+
+        public void addWarning(String warning) {
+            warnings.add(warning);
+        }
+
+        public boolean hasErrors() {
+            return !errors.isEmpty();
+        }
+
+        public boolean hasWarnings() {
+            return !warnings.isEmpty();
+        }
+
+        public boolean isValid() {
+            return errors.isEmpty();
+        }
     }
 }
